--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@popperjs/core": "^2.11.8",
     "bootstrap": "^5.3.8",
     "vue": "^3.5.21",
+    "vue-qrcode-reader": "^5.7.3",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
